fix favicon path in html and nginx config

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -91,7 +91,7 @@ server {
     }
     
     # Favicon handling
-    location = /public/favicon.svg {
+    location = /favicon.svg {
         expires 7d;
         add_header Cache-Control "public";
         access_log off;
