made changes to application.properties

--- a/springboot_auth/src/main/resources/application.properties
+++ b/springboot_auth/src/main/resources/application.properties
@@ -98,11 +98,11 @@ springdoc.swagger-ui.operationsSorter=method
 app.security.password-reset-token-expiration-hours=1
 app.security.max-failed-login-attempts=5
 app.security.account-lockout-minutes=15
-app.mail.from=${MAIL_FROM:noreply@trueshotodds.com}
-app.mail.base-url=${BASE_URL:http://localhost:8080}
+app.mail.from=${MAIL_FROM}
+app.mail.base-url=${BASE_URL}
 
 # CORS Configuration
-app.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://localhost:3001,http://127.0.0.1:3000,http://127.0.0.1:3001}
+app.cors.allowed-origins=${CORS_ALLOWED_ORIGINS}
 app.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS,PATCH
 app.cors.allowed-headers=*
 app.cors.allow-credentials=true
